# Physical_interaction

./: .gitmodules  InverseKinematics.py  README.md  Workspace.py
cpp_impl/src/controllers/: CMakeLists.txt  package.xml
cpp_impl/src/controllers/include/controllers/: example_traj.hpp
cpp_impl/src/controllers/src/: example_traj.cpp
cpp_impl/src/edubot/: CMakeLists.txt  package.xml
cpp_impl/src/edubot/include/edubot/: path_publisher.hpp  robot.hpp  robot_hw.hpp  robot_sim.hpp
cpp_impl/src/edubot/launch/: rviz.launch.py  sim.launch.py
cpp_impl/src/edubot/meshes/: GripperLeft.dae  GripperRight.dae  Link1.dae  Link2.dae  Link3.dae
cpp_impl/src/edubot/rviz/: rviz_basic_settings.rviz
cpp_impl/src/edubot/src/: path_publisher.cpp  robot.cpp  robot_hw.cpp  robot_sim.cpp
cpp_impl/src/edubot/urdf/: robot.urdf
python_impl/: .gitignore
python_impl/src/controllers/: package.xml  setup.py
python_impl/src/controllers/controllers/: Drawing.py  Forward_Kinematics.py  InverseKinematics.py  Inverse_Try.py  Jacobian.py  Jacobian_2.py  Tasks.py  Workspace.py  example_traj.py  main.py  test.py
testing/: build.sh  serial_test.py  test.cpp
